# NAMED-TYPES

./: CMakeLists.txt  README.md  example.cpp  literal_types
types/: boolean  char  double  float  int  long  long_double  long_long  short
